--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -172,8 +172,6 @@
         var runningEnabled = false;
 		var blocksToHide = ["always", "initially","onMyEvent", "onMyOtherEvent"];
 		var hiddenBlocks = [];
-		designName = "Unnamed_Design_" + (Math.floor(Math.random()*1000)).toString();
-		$('a#designNameArea').text(designName);
         var highlightPause = false;
 		var blocklyArea = document.getElementById('blocklyArea');
 		var blocklyDiv = document.getElementById('blocklyDiv');
@@ -405,7 +403,7 @@
             for(var i=0; i<blocks.length; i++) {
                 try {
                     if (blocks[i].inputList[0].fieldRow[1].text_ == blockName) {
-						if(blocks[i].childBlocks_.length == 0)
+						if(blocks[i].childBlocks_.length === 0)
 						{
 							blocks[i].setShadow(true);
 							blocks[i].setCollapsed(true);
@@ -526,7 +524,13 @@
 				workspace.clear();
 				xmlDom = Blockly.Xml.textToDom(response);
 				Blockly.Xml.domToWorkspace(workspace, xmlDom);
-				designName = name;	
+                if (name == 'event_handler_hidden') {
+		            designName = "Unnamed_Design_" + (Math.floor(Math.random()*1000)).toString();
+                }
+                else
+                {
+				    designName = name;
+                }
 				$('a#downloadLink').attr("href", "saved-bds/"+designName+".xml");
 				$('a#downloadLink').attr("download", designName+".xml");
 				$('a#designNameArea').text(designName);
