Adds most Blockly blocks

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -139,24 +139,70 @@
       </div>
 
 	<xml id="toolbox" style="display: none">
-        <category name="flow control" colour="26">
-            <block type="controls_if"></block>
+        <category name="loops" colour="210">
             <block type="controls_whileUntil"></block>
             <block type="controls_repeat_ext"></block>
+            <block type="controls_for"></block>
+            <block type="controls_forEach"></block>
         </category>
-        <category name="logic" colour="270">
+        <category name="conditionals" colour="100">
+            <block type="controls_if"></block>
+        </category>
+        <category name="logic" colour="210">
             <block type="logic_compare"></block>
+            <block type="logic_operation"></block>
+            <block type="logic_negate"></block>
+            <block type="logic_boolean"></block>
+        </category>
+        <category name="lists" colour="110">
+            <block type="lists_create_empty"></block>
+            <block type="lists_create_with"></block>
+            <block type="lists_repeat"></block>
+            <block type="lists_length"></block>
+            <block type="lists_isEmpty"></block>
+            <block type="lists_indexOf"></block>
+            <block type="lists_getIndex"></block>
+            <block type="lists_setIndex"></block>
+            <block type="lists_getSublist"></block>
+            <block type="lists_split"></block>
+        </category>
+        <category name="numbers" colour="10">
             <block type="math_number"></block>
             <block type="math_arithmetic"></block>
+            <block type="math_single"></block>
+            <block type="math_trig"></block>
+            <block type="math_constant"></block>
+            <block type="math_number_property"></block>
+            <block type="math_change"></block>
+            <block type="math_round"></block>
+            <block type="math_on_list"></block>
+            <block type="math_modulo"></block>
+            <block type="math_constrain"></block>
+            <block type="math_random_int"></block>
+            <block type="math_random_float"></block>
+        </category>
+        <category name="text" colour="220">
+            <block type="text"></block>
+            <block type="text_print"></block>
+            <block type="text_append"></block>
+            <block type="text_length"></block>
+            <block type="text_isEmpty"></block>
+            <block type="text_indexOf"></block>
+            <block type="text_charAt"></block>
+            <block type="text_getSubstring"></block>
+            <block type="text_changeCase"></block>
+            <block type="text_trim"></block>
+            <block type="text_join"></block>
         </category>
         <category name="events" colour="320">
             <block type="pop_event_queue"></block>
         </category>
-        <category name="debug" colour="100">
-            <block type="text"></block>
-            <block type="text_print"></block>
+        <category name="colour" colour="20">
+            <block type="colour_random"></block>
+            <block type="colour_rgb"></block>
+            <block type="colour_blend"></block>
         </category>
-        <category name="output" colour="42">
+        <category name="motors" colour="42">
             <block type="set_motor"></block>
             <block type="stop_motor"></block>
         </category>
