Fixes capitalization of rovercode

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>RoverCode</title>
+	<title>rovercode</title>
 	<link rel="stylesheet" href="css/foundation.css" />
 	<link rel="stylesheet" href="css/mission-control.css"/>
 	<link rel="stylesheet" href="css/blockly.css"/>
@@ -34,7 +34,7 @@
 		<nav class="top-bar" data-topbar>
 		  <ul class="title-area">
 			<li class="name">
-                <a href="#">RoverCode</a>
+                <a href="#">rovercode</a>
 			</li>
 		  </ul>
 
