--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" href="css/foundation.css" />
 	<link rel="stylesheet" href="css/mission-control.css"/>
 	<link rel="stylesheet" href="css/blockly.css"/>
-  	<script src="blockly/blockly_uncompressed.js"></script>
-  	<script src="blockly/blocks_compressed.js"></script>
-  	<script src="blockly/msg/js/en.js"></script>
+  <script src="blockly/blockly_uncompressed.js"></script>
+  <script src="blockly/blocks_compressed.js"></script>
+  <script src="blockly/msg/js/en.js"></script>
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/modernizr.js"></script>
 	<script src="js/foundation/foundation.js"></script>
@@ -24,8 +24,8 @@
 	<script src="JS-Interpreter/acorn_interpreter.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-    <link href="http://fonts.googleapis.com/css?family=Just+Another+Hand:400,300,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
+  <link href="http://fonts.googleapis.com/css?family=Just+Another+Hand:400,300,700" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
 
 </head>
 
@@ -44,8 +44,8 @@
 			    <li><a href="#" class="button expand" style="background-color: #000000; font-weight: bold" onclick="$('#nameModal').foundation('reveal', 'open')" id="designNameArea"></a></li>
                 <li><a href="#"><i class='fi-check'></i>Saved</a></li>
                 <li><a href="#" onclick='showCode();'>Show Code</a></li>
-                <li><a href="#" onclick='testStartMotor();'>Start Motor</a></li>
-								<li><a href="#" onclick='testStopMotor();'>Stop Motor</a></li>
+                <li><a href="#" onclick="sendMotorCommand('START', 5, 'FORWARD', 42);">Start Motor</a></li>
+								<li><a href="#" onclick="sendMotorCommand('STOP', 5, '', 0);">Stop Motor</a></li>
                 <li class="has-dropdown">
                     <a href="#">Show</a>
                     <ul class="dropdown">
@@ -390,16 +390,21 @@
 
 			// Add set motor API function
 			wrapper = function(motor, direction, speed) {
+								// TODO: get pin for motor
+								//sendMotorCommand('START', 5, 'FORWARD', 42);
                 writeToConsole(motor);
                 writeToConsole(direction);
                 writeToConsole(speed);
+								sendMotorCommand('START', 6, direction.data, speed.data);
                 return false;
 			};
 			interpreter.setProperty(scope, 'setMotor',
 				interpreter.createNativeFunction(wrapper));
 
-            // Add set motor API function
+      // Add stop motor API function
 			wrapper = function(motor) {
+								// TODO: get pin for motor
+								sendMotorCommand('STOP', 5, '', 0)
                 writeToConsole(motor);
                 return false;
 			};
@@ -421,17 +426,11 @@
             consoleDiv[0].scrollTop = consoleDiv[0].scrollHeight;
         }
 
-				function testStartMotor() {
-					$.post('py-cgi-test.py', {command: 'START', pin: 5, direction: 'FORWARD', speed: 42}, function(response){
+				function sendMotorCommand(command, pin, direction, speed) {
+					$.post('send-motor-command.php', {command: command, pin: pin, direction: direction, speed: speed}, function(response){
 			    	writeToConsole(response);
           });
-        }
-
-				function testStopMotor() {
-					$.post('py-cgi-test.py', {command: 'STOP', pin: 5, direction: '', speed: 0}, function(response){
-			    	writeToConsole(response);
-          });
-        }
+				}
 
 		function updateCode() {
 			code = Blockly.JavaScript.workspaceToCode(workspace);
