--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -26,6 +26,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
   <link href="http://fonts.googleapis.com/css?family=Just+Another+Hand:400,300,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
+	<script src="js/blockly-api.js"></script>
 
 </head>
 
@@ -217,490 +218,12 @@
         </category>
 	</xml>
 
-	<script>
-		var sidebarVisible = true;
-        var runningEnabled = false;
-		var blocksToHide = ["always", "initially","onMyEvent", "onMyOtherEvent"];
-		var hiddenBlocks = [];
-        var highlightPause = false;
-		var blocklyArea = document.getElementById('blocklyArea');
-		var blocklyDiv = document.getElementById('blocklyDiv');
-        Blockly.HSV_SATURATION = 0.85;
-		Blockly.HSV_VALUE = 0.9;
-        Blockly.Flyout.prototype.CORNER_RADIUS = 0;
-        Blockly.BlockSvg.START_HAT = true;
-
-		if(!!window.EventSource) {
-			var source = new EventSource("event-sending-test.php");
-			source.addEventListener('message', function(event) {
-				writeToConsole(event.data + "<br>");
-			}, false);
-			source.addEventListener('open', function(event) {
-				console.log('sse open' + "<br>");
-			}, false);
-			source.addEventListener('error', function(event) {
-				console.log('sse error' + "<br>");
-			}, false);
-		}
-		var workspace = Blockly.inject(blocklyDiv,
-			{toolbox: document.getElementById('toolbox'),
-            css: false,
-            zoom:
-                {controls: true,
-                wheel: false,
-                startScale: 1.0,
-                maxScale: 3,
-                minScale: 0.3,
-                scaleSpeed: 1.2},
-            trashcan: true,
-            }
-        );
-		workspace.addChangeListener(updateCode);
-		workspace.addChangeListener(saveDesign);
-		loadDesign('event_handler_hidden');
-
-        writeToConsole("RoverCode console started");
-
-		/* Prevent default right-click menu from getting in the way of ours */
-		document.addEventListener("contextmenu", function(e){
-			e.preventDefault();
-		}, false);
-
-        document.onkeydown = keyEvent;
-        function keyEvent(e) {
-            var evtobj = window.event ? event : e;
-            //Ctrl-Shift-7 to run code
-            if (evtobj.keyCode == 55 && evtobj.ctrlKey && evtobj.shiftKey)
-            {
-                goToRunningState();
-            }
-            //Ctrl-Shift-8 to stop code
-            if (evtobj.keyCode == 56 && evtobj.ctrlKey && evtobj.shiftKey)
-            {
-                goToStopState();
-            }
-            //Ctrl-Shift-9 to step code
-            if (evtobj.keyCode == 57 && evtobj.ctrlKey && evtobj.shiftKey)
-            {
-                stepCode();
-            }
-            //Ctrl-Shift-0 to reset code
-            if (evtobj.keyCode == 48 && evtobj.ctrlKey && evtobj.shiftKey)
-            {
-                resetCode();
-            }
-        }
-
-	  	var onresize = function(e) {
-			var element = blocklyArea;
-			var x = 0;
-			var y = 0;
-			do {
-		  		x += element.offsetLeft;
-		  		y += element.offsetTop;
-		  		element = element.offsetParent;
-			} while (element);
-			blocklyDiv.style.left = x + 'px';
-			blocklyDiv.style.top = y + 'px';
-			blocklyDiv.style.width = blocklyArea.offsetWidth + 'px';
-			blocklyDiv.style.height = blocklyArea.offsetHeight + 'px';
-	  	};
-	  	window.addEventListener('resize', onresize, false);
-	  	onresize();
-
-        videoSource = 'http://' + window.location.hostname + ':8082/?action=stream';
-        $('#videoBackground').append('<img src=' + videoSource + ' />');
-        $('#videoBackground').find('img').on("error", function() {
-            $('#videoBackground').empty();
-            $('#videoBackground').append("[no Rover webcam detected]");
-        });
-		//$('#videoBackground').css('background-image','url(' + 'http://' + window.location.hostname + ':8082/?action=stream' + ')');
-
-
-		$('#uploadForm #fileToUpload').change(function(){
-			var file = this.files[0];
-			var type = file.type;
-			if(type == "text/xml")
-				$('#loadErrorArea').empty();
-			else
-				$('#loadErrorArea').text("Please select a .xml file");
-		});
-
-		$('#uploadForm input[name=button]').click(function(){
-
-			var formData = new FormData();
-			formData.append("fileToUpload", $('#fileToUpload').get(0).files[0]);
-
-			$.ajax({
-				url: 'upload.php',  //Server script to process data
-				type: 'POST',
-				xhr: function() {  // Custom XMLHttpRequest
-					var myXhr = $.ajaxSettings.xhr();
-					return myXhr;
-				},
-				success: function (data) {
-					refreshSavedBds();
-					$("#loadStatusArea").text(data + " Look for it above.");
-
-				},
-				error: function (xhr, ajaxOptions, thrownError) {
-					$("#loadStatusArea").text("There was an error uploading your design. " + thrownError);
-				},
-				data: formData,
-				cache: false,
-				contentType: false,
-				processData: false
-			});
-		});
-
-		testString = "more stuff";
-
-		function initApi(interpreter, scope) {
-			// Add an API function for the alert() block.
-			var wrapper = function(text) {
-				text = text ? text.toString() : '';
-				return interpreter.createPrimitive(writeToConsole(text));
-			};
-			interpreter.setProperty(scope, 'alert',
-				interpreter.createNativeFunction(wrapper));
-
-			// Add an API function for highlighting blocks.
-			wrapper = function(id) {
-				id = id ? id.toString() : '';
-				return interpreter.createPrimitive(highlightBlock(id));
-			};
-			interpreter.setProperty(scope, 'highlightBlock',
-				interpreter.createNativeFunction(wrapper));
-
-			// Add test API function for AJAX
-			wrapper = function(text) {
-				$.ajax({
-					url:'process.php',
-					complete: function (response) {
-                        writeToConsole(response.responseText);
-					},
-					error: function () {
-						$('#consoleArea').append('Bummer: there was an error!');
-					}
-				});
-				return false;
-			};
-			interpreter.setProperty(scope, 'callMyPHP',
-				interpreter.createNativeFunction(wrapper));
-
-			// Add set motor API function
-			wrapper = function(motor, direction, speed) {
-								// TODO: get pin for motor
-								//sendMotorCommand('START', 5, 'FORWARD', 42);
-                writeToConsole(motor);
-                writeToConsole(direction);
-                writeToConsole(speed);
-								if (direction.data  == 'FORWARD')
-									pin = 'XIO-P7';
-								else {
-									pin = 'XIO-P5'
-								}
-								sendMotorCommand('START_MOTOR', pin, speed.data);
-                return false;
-			};
-			interpreter.setProperty(scope, 'setMotor',
-				interpreter.createNativeFunction(wrapper));
-
-      // Add stop motor API function
-			wrapper = function(motor) {
-								// TODO: get pin for motor from actual datastructure
-								/* Stop both forward and backward pins, just to be safe */
-								sendMotorCommand('STOP_MOTOR', XIO-P7, 0)
-								sendMotorCommand('STOP_MOTOR', XIO-P5, 0)
-                writeToConsole(motor);
-                return false;
-			};
-			interpreter.setProperty(scope, 'stopMotor',
-				interpreter.createNativeFunction(wrapper));
-
-			// Add test API function for getting a string
-			wrapper = function(text) {
-				return interpreter.createPrimitive('myEvent');
-			};
-			interpreter.setProperty(scope, 'popEventQueue',
-				interpreter.createNativeFunction(wrapper));
-		}
-
-        function writeToConsole(entry) {
-            consoleDiv = $('#consoleArea');
-            consoleDiv.append("<p>>> "+entry+"</p>");
-            //consoleDiv.append(entry);
-            consoleDiv[0].scrollTop = consoleDiv[0].scrollHeight;
-        }
-
-				function sendMotorCommand(command, pin, speed) {
-					$.post('send-command.php', {command: command, pin: pin, speed: Number(speed)}, function(response){
-			    	writeToConsole(response);
-          });
-				}
-
-		function updateCode() {
-			code = Blockly.JavaScript.workspaceToCode(workspace);
-			Blockly.JavaScript.STATEMENT_PREFIX = 'highlightBlock(%1);\n';
-      		Blockly.JavaScript.addReservedWords('highlightBlock');
-			myInterpreter = new Interpreter(code, initApi);
-            highlightPause = false;
-            workspace.traceOn(true);
-            workspace.highlightBlock(null);
-            runningEnabled = true;
-		}
-
-		function showCode() {
-			updateCode();
-            consoleDiv = $('#consoleArea');
-			consoleDiv.append("<p>"+code+"</p>");
-		}
-
-		function toggleBlock(blockName) {
-			loc = hiddenBlocks.indexOf(blockName);
-			if (loc> -1)
-			{
-				showBlock(blockName);
-			}
-			else
-			{
-				hideBlock(blockName);
-			}
-		}
-
-		function showBlock(blockName) {
-			loc = hiddenBlocks.indexOf(blockName);
-			blocks = workspace.getTopBlocks(true);
-            for(var i=0; i<blocks.length; i++) {
-                try {
-                    if (blocks[i].inputList[0].fieldRow[1].text_ == blockName) {
-						blocks[i].setShadow(false);
-						blocks[i].setCollapsed(false);
-						blocks[i].setCommentText(null);
-						blocks[i].svgGroup_.style.display = "inline";
-						hiddenBlocks.splice(loc,1);
-                    }
-                }
-                catch(err) {
-                }
-            }
-		}
-		function hideBlock(blockName) {
-			blocks = workspace.getTopBlocks(true);
-            for(var i=0; i<blocks.length; i++) {
-                try {
-                    if (blocks[i].inputList[0].fieldRow[1].text_ == blockName) {
-						if(blocks[i].childBlocks_.length === 0)
-						{
-							blocks[i].setShadow(true);
-							blocks[i].setCollapsed(true);
-							blocks[i].svgGroup_.style.display = "none";
-							blocks[i].setCommentText('PASS');
-							hiddenBlocks.push(blockName);
-                            return true;
-						}
-						else
-						{
-                            return false;
-                        	//alert("Please empty the function before hiding it.");
-						}
-                    }
-                }
-                catch(err) {
-                }
-            }
-		}
-
-		function hideBlockByComment(comment) {
-			blocks = workspace.getTopBlocks(true);
-            for(var i=0; i<blocks.length; i++) {
-                try {
-					if (blocks[i].getCommentText().indexOf(comment) > -1) {
-						blocks[i].setShadow(true);
-						blocks[i].setCollapsed(true);
-						blocks[i].svgGroup_.style.display = "none";
-                    }
-                }
-                catch(err) {
-                }
-            }
-		}
-
-        function highlightBlock(id) {
-			if (workspace.getBlockById(id).getCommentText().indexOf('PASS') > -1) {
-				console.log('not pausing');
-				highlightPause = false;
-			}
-			else
-			{
-            	highlightPause = true;
-            	workspace.highlightBlock(id);
-			}
-        }
-
-        function runCode() {
-            if (stepCode() && runningEnabled) {
-                window.setTimeout(runCode, 10);
-            }
-        }
-
-		function stepCode() {
-            var ok = myInterpreter.step();
-            if (!ok) {
-                // Program complete, no more code to execute.
-                workspace.highlightBlock(null);
-                console.log("code finished");
-                goToStopState();
-                return false;
-            }
-            if (highlightPause) {
-                // A block has been highlighted.  Pause execution here.
-                console.log("code paused");
-                highlightPause = false;
-            } else {
-                // Keep executing until a highlight statement is reached.
-                stepCode();
-            }
-            return true;
-		}
-
-        function resetCode() {
-            goToStopState();
-            updateCode();
-        }
-
-        function goToRunningState() {
-            $('#runButton').css('color', '#FFCC33');
-            updateCode();
-            runCode();
-        }
-
-        function goToStopState() {
-            runningEnabled = false;
-            $('#runButton').css('color', '#FFFFFF');
-        }
-
-
-		function saveDesign() {
-			xml = Blockly.Xml.workspaceToDom(workspace);
-			xmlString = Blockly.Xml.domToText(xml);
-			$.post('save-bd.php', {bdString: xmlString, designName: designName}, function(response){
-			}).error(function(){
-  				writeToConsole("There was an error saving your design to the rover");
-			});
-		}
-
-		function chooseDesign() {
-			$('#loadModal').foundation('reveal', 'open');
-			refreshSavedBds();
-		}
-
-		function refreshSavedBds() {
-			$.get('get-saved-bd-list.php', function(response){
-				json = JSON.parse(response);
-				if (!json.length){
-					$('#savedDesignsArea').text("There are no designs saved on this rover");
-				} else {
-					$('#savedDesignsArea').empty();
-					json.forEach(function(entry) {
-						$('#savedDesignsArea').append("<a href='#' class='button' style='margin:10px;' onclick='return loadDesign(\""+entry+"\")'>"+entry+"</a>");
-					});
-				}
-
-			}
-			);
-		}
-
-		function loadDesign(name) {
-			$('#loadModal').foundation('reveal', 'close');
-			$.get('get-bd.php', { designName:name }, function(response){
-				workspace.clear();
-				xmlDom = Blockly.Xml.textToDom(response);
-				Blockly.Xml.domToWorkspace(workspace, xmlDom);
-                if (name == 'event_handler_hidden') {
-		            designName = "Unnamed_Design_" + (Math.floor(Math.random()*1000)).toString();
-                }
-                else
-                {
-				    designName = name;
-                }
-				$('a#downloadLink').attr("href", "saved-bds/"+designName+".xml");
-				$('a#downloadLink').attr("download", designName+".xml");
-				$('a#designNameArea').text(designName);
-
-				hideBlockByComment("MAIN EVENT HANDLER LOOP");
-				var hiddenBlock;
-                var allBlocksHidden = true;
-				for (hiddenBlock of blocksToHide) {
-                    if (!hideBlock(hiddenBlock)) {
-                        allBlocksHidden = false;
-                    }
-				}
-                if (allBlocksHidden) {
-                    showBlock('always');
-                }
-			}).error(function(){
-  				alert("There was an error loading your design from the rover");
-			});
-            updateCode();
-		}
-
-
-		function toggleSidebar() {
-			var widthDelta = 400;
-			if ($("#codeArea").is(":visible")){
-				var currentWidth = $('#blocklyArea').outerWidth();
-				$("#blocklyArea").css("min-width", currentWidth+widthDelta);
-				$("#sidebarButton").css("background-color", "#333333");
-			} else {
-				$("#blocklyArea").css("min-width", 'auto');
-				$("#sidebarButton").css("background-color", "#000000");
-			}
-			$("#consoleArea").fadeToggle(0);
-			$("#videoBackground").fadeToggle(0);
-			onresize();
-			Blockly.fireUiEvent(window, 'resize');
-		}
-
-		function acceptName() {
-			designName = $('input[name=designName]').val();
-
-			$.get('get-saved-bd-list.php', function(response){
-				json = JSON.parse(response);
-				var duplicate = false;
-				json.forEach(function(entry) {
-					if (entry == designName)
-						duplicate = true;
-				});
-
-				if (designName === ''){
-					$('#nameErrorArea').text('Please enter a name for your design in the box');
-				} else if (duplicate) {
-					$('#nameErrorArea').text('This name has already been chosen. Please pick another one.');
-				} else {
-					saveDesign();
-					$('#nameErrorArea').empty();
-					$('a#designNameArea').text(designName);
-					$('a#downloadLink').attr("href", "saved-bds/"+designName+".xml");
-					$('a#downloadLink').attr("download", designName+".xml");
-					$('#nameModal').foundation('reveal', 'close');
-				}
-			});
-
-
-
-		}
-
-	$('#nameModal').foundation('reveal', 'open');
-
-	</script>
-
+	<script src="js/mission-control.js"></script>
 
 	<script type="text/javascript">
 	   $(document).foundation();
 	</script>
 
 </body>
-
 
 </html>
