Handle IR sensor events

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -89,16 +89,24 @@
 	</div>
 
 	<div id="tableArea">
-	<table id="theTable" style="margin: 0 0 0 0">
-		<tr>
-			<td rowspan="2" id="blocklyArea"> </td>
-            <td style="padding: 0 0 0 0;"><div id="consoleArea"></div></td>
-		</tr>
-        <tr>
-			<td id="videoBackground">
-			</td>
-		</tr>
-	</table>
+		<table id="theTable" style="margin: 0 0 0 0">
+			<tr>
+				<td rowspan="3" id="blocklyArea"> </td>
+	      <td style="padding: 0 0 0 0;"><div id="consoleArea"></div></td>
+			</tr>
+			<tr>
+				<td id="videoBackground">
+				</td>
+			</tr>
+			<tr>
+				<td id="indicatorsArea">
+					<div class="row">
+						<div class="large-6 columns text-"><div class="indicator leftEyeIndicator well"></div></div>
+						<div class="large-6 columns"><div class="indicator rightEyeIndicator well"></div></div>
+					</div>
+				</td>
+			</tr>
+		</table>
 	</div>
 
 	<div id="blocklyDiv" style="position: absolute"></div>
