Adds support for continue (sleep) block

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -163,6 +163,9 @@
             <block type="logic_negate"></block>
             <block type="logic_boolean"></block>
         </category>
+				<category name="time" colour="330">
+					<block type="continue"></block>
+				</category>
         <category name="motors" colour="42">
             <block type="motors_start"></block>
         	<block type="motors_stop"></block>
