Changes dummy event handler names for left and right eyes

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -54,8 +54,8 @@
                     <ul class="dropdown">
                         <li><a href="#" onclick="toggleBlock('initially')">initially</a></li>
                         <li><a href="#" onclick="toggleBlock('always')">always</a></li>
-                        <li><a href="#" onclick="toggleBlock('onMyEvent')">onMyEvent</a></li>
-                        <li><a href="#" onclick="toggleBlock('onMyOtherEvent')">onMyOtherEvent</a></li>
+                        <li><a href="#" onclick="toggleBlock('whenLeftEyeSeesSomething')">whenLeftEyeSeesSomething</a></li>
+                        <li><a href="#" onclick="toggleBlock('whenRightEyeSeesSomething')">whenRightEyeSeesSomething</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
