--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>rovercode</title>
+	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/foundation.css" />
 	<link rel="stylesheet" href="css/mission-control.css"/>
 	<link rel="stylesheet" href="css/blockly.css"/>
