--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -7,27 +7,43 @@
 	<link rel="stylesheet" href="css/foundation.css" />
 	<link rel="stylesheet" href="css/mission-control.css"/>
 	<link rel="stylesheet" href="css/blockly.css"/>
-  <script src="blockly/blockly_uncompressed.js"></script>
-  <script src="blockly/blocks_compressed.js"></script>
-  <script src="blockly/msg/js/en.js"></script>
+
+
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/modernizr.js"></script>
 	<script src="js/foundation/foundation.js"></script>
 	<script src="js/foundation/foundation.topbar.js"></script>
 	<script src="js/foundation/foundation.reveal.js"></script>
 	<script src="js/foundation/foundation.accordion.js"></script>
-	<script src="blockly/appengine/storage.js"></script>
-	<script src="blockly/javascript_compressed.js"></script>
-	<script src="blockly/generators/javascript/motors.js"></script>
-	<script src="blockly/generators/javascript/events.js"></script>
-	<script src="blockly/generators/javascript/sensors.js"></script>
+
+	<script src="blockly/blockly_uncompressed.js"></script>
+	<script src="blockly/generators/javascript.js"></script>
+	<script src="blockly/generators/javascript/logic.js"></script>
+	<script src="blockly/generators/javascript/loops.js"></script>
+	<script src="blockly/generators/javascript/math.js"></script>
+	<script src="blockly/generators/javascript/text.js"></script>
+	<script src="blockly/generators/javascript/lists.js"></script>
+	<script src="blockly/generators/javascript/colour.js"></script>
+	<script src="blockly/generators/javascript/variables.js"></script>
+	<script src="blockly/generators/javascript/procedures.js"></script>
+	<script src="blockly/blocks/logic.js"></script>
+	<script src="blockly/blocks/loops.js"></script>
+	<script src="blockly/blocks/math.js"></script>
+	<script src="blockly/blocks/text.js"></script>
+	<script src="blockly/blocks/lists.js"></script>
+	<script src="blockly/blocks/colour.js"></script>
+	<script src="blockly/blocks/variables.js"></script>
+	<script src="blockly/blocks/procedures.js"></script>
 	<script src="blockly/blocks/motors.js"></script>
 	<script src="blockly/blocks/events.js"></script>
 	<script src="blockly/blocks/sensors.js"></script>
+	<script src="blockly/msg/js/en.js"></script>
+	<script src="blockly/appengine/storage.js"></script>
+
 	<script src="JS-Interpreter/acorn_interpreter.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
 	<link rel="stylesheet" href="foundation-icons/foundation-icons.css">
 	<script src="js/blockly-api.js"></script>
 
