Adds missing generators

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -26,6 +26,9 @@
 	<script src="blockly/generators/javascript/colour.js"></script>
 	<script src="blockly/generators/javascript/variables.js"></script>
 	<script src="blockly/generators/javascript/procedures.js"></script>
+	<script src="blockly/generators/javascript/motors.js"></script>
+	<script src="blockly/generators/javascript/events.js"></script>
+	<script src="blockly/generators/javascript/sensors.js"></script>
 	<script src="blockly/blocks/logic.js"></script>
 	<script src="blockly/blocks/loops.js"></script>
 	<script src="blockly/blocks/math.js"></script>
