--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -29,6 +29,7 @@
 	<script src="blockly/generators/javascript/motors.js"></script>
 	<script src="blockly/generators/javascript/events.js"></script>
 	<script src="blockly/generators/javascript/sensors.js"></script>
+	<script src="blockly/generators/javascript/time.js"></script>
 	<script src="blockly/blocks/logic.js"></script>
 	<script src="blockly/blocks/loops.js"></script>
 	<script src="blockly/blocks/math.js"></script>
@@ -40,6 +41,7 @@
 	<script src="blockly/blocks/motors.js"></script>
 	<script src="blockly/blocks/events.js"></script>
 	<script src="blockly/blocks/sensors.js"></script>
+	<script src="blockly/blocks/time.js"></script>
 	<script src="blockly/msg/js/en.js"></script>
 	<script src="blockly/appengine/storage.js"></script>
 
