Moves roverResource to new rover-utilities.js file

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -50,6 +50,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
 	<link rel="stylesheet" href="foundation-icons/foundation-icons.css">
+	<script src="js/rover-utilities.js"></script>
 	<script src="js/blockly-api.js"></script>
 
 </head>
